Change to contact us section

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <h3>Get In Touch</h3>
         <p>Email or Call Us to set up a consult</p>
-        <p>Email: <strong>test@test.com</strong></p>
-        <p>Phone: <strong>+91-1111111111</strong></p>
+        <p>Email: <strong>31121986g@gmailcom</strong></p>
+        <p>Phone: <strong>+91-9108776628</strong></p>
     </footer>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
