--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>Email: <strong>31121986g@gmailcom</strong></p>
         <p>Phone: <strong>+91-9108776628</strong></p>
     </footer>
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
