--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
             <div id="header">
                 <h2>Our Work</h2>
             </div>
-            <img src="https://source.unsplash.com/1600x900/?nature,water" alt="">
+            <img data-lazy="https://source.unsplash.com/1600x900/?nature,water" alt="Photo 1">
             <div class="caption">
                 <h3>Photo One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, ipsum!</p>
             </div>
-            <img src="https://source.unsplash.com/1600x900/?nature,tree" alt="">
+            <img data-lazy="https://source.unsplash.com/1600x900/?nature,tree" alt="">
             <div class="caption">
                 <h3>Photo Two</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, ipsum!</p>
             </div>
-            <img src="https://source.unsplash.com/1600x900/?nature,flowers" alt="">
+            <img data-lazy="https://source.unsplash.com/1600x900/?nature,flowers" alt="Photo 1">
             <div class="caption">
                 <h3>Photo Three</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, ipsum!</p>
             </div>
-            <img src="https://source.unsplash.com/1600x900/?nature,animals" alt="">
+            <img data-lazy="https://source.unsplash.com/1600x900/?nature,animals" alt="Photo 1">
             <div class="caption">
                 <h3>Photo Four</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, ipsum!</p>
             </div>
-            <img src="https://source.unsplash.com/1600x900/?nature,clouds" alt="">
+            <img data-lazy="https://source.unsplash.com/1600x900/?nature,clouds" alt="Photo 1">
             <div class="caption">
                 <h3>Photo Five</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, ipsum!</p>
